Fix center align bug

--- a/src/main/webapp/resources/css/work-space-style.css
+++ b/src/main/webapp/resources/css/work-space-style.css
@@ -120,6 +120,7 @@ section {
 .item__title {
     user-select: none;
     cursor: pointer;
+    margin: 0 16px;
 }
 
 .fa-cog {
@@ -132,4 +133,14 @@ section {
     font-size: var(--font-regular);
     color: var(--color-red);
     cursor: pointer;
+}
+
+@media screen and (max-width: 768px) {
+    .work-spaces__item i {
+        display: none;
+    }
+
+    .item__profile-img {
+        display: none;
+    }
 }
